# Project2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  TraceWorldGen.json
include/Input/: FreeCameraInputHandler.h  GameInputHandler.h
include/game/: Game.h  GameFwd.h  Player.h
include/object/: Actor.h  AnimatedMeshActor.h  ObjectFwd.h
include/scene/rendering/: Renderer.h
include/util/: Bit.h  MultiDimArrayIndex.h  Numeric.h
include/util/noise/: NoiseGenerator.h
include/utils/: Bit.h  Noise.h  Timer.h
include/voxel/: BVoxLoader.h  ChunkMesher.h  CollisionInfo.h  CollisionManager.h  MNode.h  MNodeUtil.h  Morton.h  MortonOctree.h  OctreeConstants.h  VoxMeshManager.h  VoxNode.h  VoxelFwd.h  VoxelInc.h  VoxelMesh.h  VoxelSide.h  VoxelUtils.h  WorldRenderer.h
include/voxel/map/: RandomMapGenerator.h
nsight/: TheProject2.nsight-gfxproj
nsight/asdsaasdsad/: asdsaasdsad.nsight-gfxproj
resources/models/: ProjectSteve.blend  ProjectSteve.fbx  ProjectSteve.iqm  ProjectSteve.mbd  jobtvajumat.blend  jobtvajumat.fbx  mr_fixit.iqm  mr_fixit.mbd  pickaxe.fbx  steve.blend  steve.blend1  steve.iqe  steve.iqm  steve.mbd  untitled.fbx  untitled.iqm
resources/shaders/: cell.frag  cell.vert  debug.frag  debug_renderer.vert  phong.vert  phong_anim.frag  phong_anim.vert  phong_color.frag  phong_color.vert  phong_no_normalmap.frag  phong_no_normalmap.vert  voxel.frag  voxel.vert
sources/: CMakeLists.txt
sources/include/core/: AxisAlignedBoundingBox.h
sources/include/game/: Game.h
sources/include/threading/: BackgroundJob.h  BackgroundJobRunner.h  ThreadingInc.h
sources/include/util/: BulkTextureLoader.h  Numeric.h  TypeUtils.h
sources/include/util/noise/: NoiseGenerator.h
sources/include/util/thread/: Sleep.h
sources/include/voxel/: BVoxLoader.h  CollisionInfo.h  MotreeInc.h  OctreeConstants.h  VoxNode.h  VoxelConfig.h  VoxelFwd.h  VoxelInc.h  VoxelSide.h  VoxelUtils.h  WorldRenderer.h
sources/include/voxel/world/: World.h  WorldGenerator.h  WorldSuperChunk.h
sources/src/: main.cpp
sources/src/core/: AxisAlignedBoundingBox.cpp
sources/src/game/: Game.cpp  GameStateManager.h
sources/src/game/state/: AnimationPreviewState.cpp  AnimationPreviewState.h  GameState.cpp  GameState.h
sources/src/game/state/voxtest/: VoxTestState.cpp  VoxTestState.h
sources/src/object/: Actor.cpp  AnimatedMeshActor.cpp
sources/src/utils/thread/: Sleep.cpp
sources/src/voxel/: BVoxLoader.cpp  ChunkMesher.cpp  CollisionInfo.cpp  MNodeUtil.cpp  VoxNode.cpp  VoxelMesh.cpp  VoxelSide.cpp  WorldRenderer.cpp
sources/src/voxel/world/: World.cpp  WorldGenerator.cpp
src/: main.cpp
src/Input/: GameInputHandler.cpp
src/game/: Game.cpp  Game.h  GameStateManager.cpp  GameStateManager.h  Player.cpp
src/game/state/: AnimationPreviewState.cpp  AnimationPreviewState.h  GameState.cpp  GameState.h  IGameState.h
src/object/: AnimatedMeshActor.cpp  Player.cpp
src/scene/rendering/: Renderer.cpp
src/utils/: Timer.cpp
src/utils/thread/: Sleep.cpp
src/voxel/: CollisionManager.cpp  MNode.cpp  MortonOctree.cpp  VoxMeshManager.cpp  VoxNode.cpp  VoxelMesh.cpp  VoxelSide.cpp  WorldRenderer.cpp
src/voxel/map/: RandomMapGenerator.cpp
src/voxel/world/: World.cpp  WorldGenerator.cpp
tests/: CMakeLists.txt  VoxUtilsTests.cpp
